# goyama

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.js  go.work  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  data-source.yml  feature.yml
.github/workflows/: api.yml  corpus.yml  web.yml
apps/web-admin/: README.md  index.html  package.json  vite.config.ts
corpus/: CHANGELOG.md  README.md
docs/: 01-vision-and-scope.md  02-data-strategy.md  03-domain-model.md  04-architecture.md  05-features.md  06-ml-disease-scanner.md  07-marketplace-community.md  08-roadmap.md  09-content-strategy.md  10-ui-ux-principles.md  11-backend-api-design.md
pipelines/: .env.example  Makefile  README.md  pyproject.toml
pipelines/core/: __init__.py  cli.py  config.py  crawler.py  exporter.py  extractor.py  fetch.py  log.py  provenance.py  rate_limit.py  registry.py  robots.py  storage.py
pipelines/geo/: README.md
pipelines/geo/fixtures/: aez.geojson  districts.geojson
pipelines/prompts/: crop_extraction_v1.md
pipelines/sources/doa/: README.md  config.yaml  crawler.py  extractor.py
pipelines/sources/market_prices/: README.md  __init__.py  config.yaml  crawler.py  normalizer.py
pipelines/sources/market_prices/fixtures/: dambulla-2026-04-15.csv
pipelines/tests/: test_doa_crawler.py  test_exporter.py  test_market_prices.py  test_rate_limit.py  test_schema_validation.py
pipelines/tests/fixtures/doa/: brinjal.html
scripts/: validate_corpus.py
(+455 files in other folders)
